[workspace]
default-members = ["crates/pevm"]
members = ["bins/fetch", "crates/pevm"]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
pevm = { path = "crates/pevm", features = ["full"] }

# alloy
alloy-consensus = "0.12.6"
alloy-primitives = { version = "0.8.25", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-provider = "0.12.6"
alloy-rlp = "0.3.12"
alloy-rpc-types-eth = "0.12.6"
alloy-transport = "0.12.6"
alloy-trie = "0.7.9"

# Will remove [revm] with https://github.com/risechain/pevm/issues/382.
revm = { git = "https://github.com/risechain/revm", rev = "a79e833be41199a140dc85a222141c4bdf0b9aa5", features = [
  "serde",
] }
revme = { git = "https://github.com/risechain/revm", rev = "a79e833be41199a140dc85a222141c4bdf0b9aa5" }

# OP
op-alloy-consensus = "0.11.3"
op-alloy-network = "0.11.3"
op-alloy-rpc-types = "0.11.3"

# Allocators
rpmalloc = { version = "0.2.2", features = ["thread_cache", "global_cache"] }
snmalloc-rs = "0.3.8"
tikv-jemallocator = "0.6.1"

bincode = "1.3.3"
# We can roll our own but [revm] depends on this anyway.
bitflags = "2.9.4"
bitvec = "1.0.1"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
criterion = "0.7.0"
dashmap = "6.1.0"
flate2 = "1.1.5"
hashbrown = "0.15.5"
rand = "0.8.5"
rayon = "1.11.0"
reqwest = "0.12.24"
rustc-hash = "2.1.1"
serde = "=1.0.221"
serde_json = "1.0.145"
smallvec = "1.15.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
walkdir = "2.5.0"
