[workspace]
default-members = ["crates/pevm"]
members = ["bins/fetch", "crates/pevm"]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
pevm = { path = "crates/pevm", features = ["rpc-storage"] }

# alloy
alloy-consensus = "=1.7.3"
alloy-primitives = { version = "1.0.0", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-provider = "=1.7.3"
alloy-rlp = "0.3.12"
alloy-rpc-types-eth = "=1.7.3"
alloy-transport = "=1.7.3"
alloy-trie = "0.9.5"

# Will remove [revm] with https://github.com/risechain/pevm/issues/382.
op-revm = "3.0.0"
revm = { version = "22.0.1", features = ["serde"] }
revm-statetest-types = "3.0.1"
revme = "4.0.2"

# OP
op-alloy-consensus = "0.24.0"
op-alloy-network = "0.24.0"
op-alloy-rpc-types = "0.24.0"

# Allocators
rpmalloc = { version = "0.2.2", features = ["thread_cache", "global_cache"] }
snmalloc-rs = "0.3.8"
tikv-jemallocator = "0.6.1"

bincode = "1.3.3"
# We can roll our own but [revm] depends on this anyway.
bitflags = "2.9.4"
bitvec = "1.0.1"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
criterion = "0.7.0"
dashmap = "6.1.0"
flate2 = "1.1.5"
hashbrown = { version = "0.15.5", features = ["serde"] }
rand = "0.8.5"
rayon = "1.11.0"
reqwest = "0.12.24"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
smallvec = "1.15.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
walkdir = "2.5.0"
