[workspace]
default-members = ["crates/pevm"]
members = ["bins/fetch", "crates/pevm"]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = "warn"
rust.unreachable_pub = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
redundant_else = "warn"
type_repetition_in_bounds = "warn"
unnested_or_patterns = "warn"
use_self = "warn"

[workspace.dependencies]
pevm = { path = "crates/pevm", features = ["rpc-storage"] }

# alloy
alloy-consensus = "2.0.1"
alloy-primitives = { version = "1.5.7", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-provider = "2.0.1"
alloy-rlp = "0.3.15"
alloy-rpc-types-eth = "2.0.1"
alloy-transport = "2.0.1"
alloy-trie = "0.9.5"

# Will remove [revm] with https://github.com/risechain/pevm/issues/382.
op-revm = "19.0.0"
revm = { version = "38.0.0", features = ["serde"] }
revm-statetest-types = "17.0.1"
revme = "15.0.0"

# OP
op-alloy-consensus = "2.0.0"
op-alloy-network = "2.0.0"
op-alloy-rpc-types = "2.0.0"

# Allocators
rpmalloc = { version = "0.2.2", features = ["thread_cache", "global_cache"] }
snmalloc-rs = "0.7.4"
tikv-jemallocator = "0.6.1"

bincode = { version = "2.0.1", features = ["serde"] }
# We can roll our own but [revm] depends on this anyway.
bitflags = "2.11.1"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
criterion = "0.8.2"
dashmap = "6.1.0"
flate2 = "1.1.9"
hashbrown = { version = "0.17.0", features = ["serde"] }
rand = "0.10.1"
rayon = "1.12.0"
reqwest = "0.13.2"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "1.15.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
walkdir = "2.5.0"
