[package]
name = "pevm-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
flate2.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
reqwest.workspace = true

alloy-provider.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true

pevm = { workspace = true, features = ["rpc"] }
