[package]
name = "pevm-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true

bincode.workspace = true
clap.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

pevm.workspace = true
