[package]
name = "reth-libmdbx"
description = "Idiomatic and safe MDBX wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reth-mdbx-sys = { path = "./mdbx-sys" }

bitflags = "2"
byteorder = "1"
derive_more = "0.99"
indexmap = "2"
parking_lot = "0.12"
thiserror = "1"
dashmap = { version = "6.0.1", features = ["inline"], optional = true }
tracing = "0.1.0"

[features]
default = []
return-borrowed = []
read-tx-timeouts = ["dashmap", "dashmap/inline"]

[dev-dependencies]
pprof = { version = "0.13", features = [
    "flamegraph",
    "frame-pointer",
    "criterion",
] }
criterion = "0.5.1"
rand = "0.8"
rand_xorshift = "0.3"
tempfile = "3"

[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "transaction"
harness = false
