[package]
name = "pevm"
version = "0.1.0"
edition = "2021"

[features]
defaults = []
full = ["optimism", "rpc-storage"]
rpc-storage = [
  "dep:reqwest",
  "dep:alloy-transport",
  "dep:alloy-transport-http",
  "dep:tokio",
]
optimism = [
  "revm/optimism",
  "dep:alloy-transport",
  "dep:alloy-transport-http",
  "dep:op-alloy-consensus",
  "dep:op-alloy-network",
  "dep:op-alloy-rpc-types",
  "dep:reqwest",
]
global-alloc = ["dep:rpmalloc", "dep:snmalloc-rs", "dep:tikv-jemallocator"]

[dependencies]
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-trie.workspace = true

bitflags.workspace = true
bitvec.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true

revm.workspace = true

# OP dependencies
op-alloy-consensus = { workspace = true, optional = true }
op-alloy-network = { workspace = true, optional = true }
op-alloy-rpc-types = { workspace = true, optional = true }

# Storage RPC feature dependencies
alloy-transport = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Various allocators for benchmarks
rpmalloc = { workspace = true, optional = true }
snmalloc-rs = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true
flate2.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
revme.workspace = true
serde_json.workspace = true
snmalloc-rs.workspace = true
tikv-jemallocator.workspace = true
walkdir.workspace = true

[lints]
workspace = true

[[bench]]
name = "mainnet"
harness = false

[[bench]]
name = "gigagas"
harness = false
